# budget-planner

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.js  vite.config.ts  vitest.config.ts
migrations/: 001_init.sql
scripts/: extract_balance_seed.py
shared/: types.ts
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  projection_math.rs
src/components/: CorrectionsPanel.tsx  DataPanel.tsx  DriversPanel.tsx  MonthlyClosePanel.test.tsx  MonthlyClosePanel.tsx  OverviewPanel.tsx  SettingsPanel.tsx  SnapshotPanel.tsx  TimelinePanel.test.tsx  TimelinePanel.tsx
src/lib/: date.ts  money.ts  tauriApi.ts
src/state/: useAppStore.ts
