[package]
name = "balance_planner"
version = "0.1.0"
description = "Desktop-first monthly balance planner"
authors = ["lordmitrii"]
edition = "2021"

[lib]
name = "balance_planner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.1.1", features = [] }
chrono = { version = "0.4.39", features = ["serde"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
reqwest = { version = "0.12.9", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
